--- a/Week_08/shardingjdbc/src/main/resources/application.properties
+++ b/Week_08/shardingjdbc/src/main/resources/application.properties
@@ -20,9 +20,9 @@ spring.shardingsphere.datasource.ds1.password=123456
 
 
 
-spring.shardingsphere.sharding.tables.t_test.actual-data-nodes=ds$->{0..1}.t_test$->{0..4}
+spring.shardingsphere.sharding.tables.t_test.actual-data-nodes=ds0.t_test$->{[0,2,4,6,8,10,12,14]},ds1.t_test$->{[1,3,5,7,9,11,13,15]}
 spring.shardingsphere.sharding.tables.t_test.table-strategy.inline.sharding-column=id
-spring.shardingsphere.sharding.tables.t_test.table-strategy.inline.algorithm-expression=t_test$->{id % 5}
+spring.shardingsphere.sharding.tables.t_test.table-strategy.inline.algorithm-expression=t_test$->{id % 16}
 
 
 spring.shardingsphere.sharding.tables.t_test.database-strategy.inline.algorithm-expression=ds$->{id % 2}
