--- a/Week_12/kafka/src/main/resources/application.properties
+++ b/Week_12/kafka/src/main/resources/application.properties
@@ -1,1 +1,22 @@
 
+############### Kafka相关配置 ####################
+#kafka节点地址
+spring.kafka.bootstrap-servers=127.0.0.1:9092,127.0.0.1:19092,127.0.0.1:29092
+####生产者属性
+#配置发送ack的属性
+spring.kafka.producer.acks=all
+#设置重试次数
+spring.kafka.producer.retries=3
+#设置序列化 反序列化方式
+#spring.kafka.producer.key-serializer=rg.apache.kafka.common.ser
+
+
+####消费者属性
+#设置分组消费进度 earliest 从提交的offset后进行消费若无 从头开始消费  latest 从提交的offset后进行消费，若无 消费新生产的数据  none各分区都存在已提交的offset时，从offset后开始消费；只要有一个分区不存在已提交的offset，则抛出异常
+spring.kafka.consumer.auto-offset-reset=earliest
+
+
+
+#设置打印日志级别
+logging.level.org.springframework.kafka=info
+logging.level.org.apache.kafka=info
